outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-26_00-23-35/evaluations/problem_eval5922970072189410323_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance as unvisited nodes decrease, while centrality is weighted by the node's distance variance, favoring nodes that are both close to the current position and centrally located relative to remaining destinations.}
                                                                                    ^
SyntaxError: unterminated string literal (detected at line 1)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance as unvisited nodes decrease, while centrality is weighted by the node's distance variance, favoring nodes that are both close to the current position and centrally located relative to remaining destinations.}
                                                                                    ^
SyntaxError: unterminated string literal (detected at line 1)
